[FE][fix] RoomType 탭 z-index 설정 <이원재>

--- a/FE/src/features/map/roomlist/RoomList.css
+++ b/FE/src/features/map/roomlist/RoomList.css
@@ -15,6 +15,8 @@
     position: sticky;
     top: 0%;
     background-color: #F1FAD3;
+    z-index: 100;
+    opacity: 1;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -55,7 +57,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100%;
+    height: 70%;
     padding: 0.2rem 0.5rem;
     font-size: 1rem;
   }
